src/parser/snapshots/output/simple_return.ast.snap
---
source: src/parser/parser.rs
description: basic
expression: ast
info: simple_return.c
---
functions:
  - location:
      line: 1
      column: 1
    name:
      name: main
      location:
        line: 1
        column: 5
    body:
      start_loc:
        line: 1
        column: 16
      end_loc:
        line: 3
        column: 1
      items:
        - statement:
            location:
              line: 2
              column: 5
            label: ~
            kind:
              return:
                location:
                  line: 2
                  column: 12
                kind:
                  int_constant:
                    - "0"
                    - decimal
