src/parser/snapshots/output/simple_return_with_expression.ast.snap
---
source: src/parser/parser.rs
description: basic
expression: ast
info: simple_return_with_expression.c
---
declarations:
  - location:
      line: 1
      column: 1
    kind:
      function_declaration:
        location:
          line: 1
          column: 1
        name:
          name: main
          location:
            line: 1
            column: 5
        params: []
        body:
          start_loc:
            line: 1
            column: 16
          end_loc:
            line: 3
            column: 1
          items:
            - statement:
                location:
                  line: 2
                  column: 5
                labels: []
                kind:
                  return:
                    location:
                      line: 2
                      column: 12
                    kind:
                      binary:
                        - add
                        - location:
                            line: 2
                            column: 12
                          kind:
                            int_constant:
                              - "1"
                              - decimal
                        - location:
                            line: 2
                            column: 16
                          kind:
                            int_constant:
                              - "2"
                              - decimal
